--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mysql": "^2.18.1",
-    "nodemon": "^2.0.16"
+    "mysql": "^2.18.1"
   },
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
   }
 }
