--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "mysql": "^2.18.1"
   },
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
