--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "pm2": "^5.2.0"
   },
   "scripts": {
     "dev": "nodemon index.js",
-    "start": "node index.js"
+    "start": "pm2 start index.js"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
