--- a/package.json
+++ b/package.json
@@ -13,10 +13,7 @@
     "pm2": "^5.2.0"
   },
   "scripts": {
-    "dev": "nodemon index.js",
-    "start": "pm2-runtime start ecosystem.config.js --env production -i max" 
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.16"
+    "dev": "pm2-dev index.js",
+    "start": "pm2 start ecosystem.config.js --no-daemon --env production"
   }
 }
